@@ -59,6 +59,7 @@ import io.crate.types.DataTypes;
 import org.apache.lucene.util.BytesRef;
 import org.elasticsearch.cluster.metadata.IndexMetaData;
 import org.elasticsearch.cluster.metadata.MappingMetaData;
+import org.elasticsearch.common.Booleans;
 import org.elasticsearch.common.collect.Tuple;
 import org.elasticsearch.common.settings.Settings;
 
@@ -387,7 +388,8 @@ public class DocIndexMetaData {
             boolean nullable = !notNullColumns.contains(newIdent);
             columnProperties = furtherColumnProperties(columnProperties);
             Reference.IndexType columnIndexType = getColumnIndexType(columnProperties);
-            boolean columnsStoreDisabled = !(boolean) columnProperties.getOrDefault(DOC_VALUES, true);
+            boolean columnsStoreDisabled = !Booleans.parseBoolean(
+                columnProperties.getOrDefault(DOC_VALUES, true).toString(), true);
             if (columnDataType == DataTypes.GEO_SHAPE) {
                 String geoTree = (String) columnProperties.get("tree");
                 String precision = (String) columnProperties.get("precision");
