@@ -21,6 +21,9 @@ Changes
 Fixes
 =====
 
+- Fixed an issue that resulted in an unusable partitioned table when at least
+  one column was defined with an explicit ``COLUMNSTORE`` setting.
+
 - Fixed an issue that would cause `count(*)` to return the wrong count when
   applied to a subquery.
 
